# forex

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCTION_SETUP.md  README.md  cloudbuild.yaml  debug_server.py  deployment_handoff.md  docker-compose.yml  env.json  exceptions.py  healthcheck.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_api_server.bat  seed_database.py  setup.py  supabase_schema.sql
agents/: README.md  __init__.py  communication.py  context_aware_analyzer.py  news.py  sentiment_analysis.py
agents/context/: __init__.py  analysis_memory_manager.py
agents/framework/: __init__.py  agent.py  agent_implementations.py  agent_types.py  langgraph_integration.py
agents/tools/: market_tools.py
agents/workflows/: __init__.py  forex_analysis_workflow.py
analysis/: __init__.py  entity_extraction.py  impact_prediction.py  pine_script.py  sentiment.py
analysis/technical/: __init__.py  advanced_patterns.py  deep_learning.py  demo_technical_suite.py  risk_adjusted.py
api/: auth.py  strategy_endpoints.py  template_filters.py
automation/: __init__.py
automation/workflows/: __init__.py
backend_api/: main.py
backend_api/db/: account_db.py  execution_db.py  market_data_db.py
backend_api/endpoints/: auth.py  dashboard.py  status_endpoints.py
backups/api_v1/: __init__.py  account_endpoints.py  auto_trading_endpoints.py  forex_optimizer_endpoints.py  signal_endpoints.py  system_endpoints.py
common/: models.py
config/: README.md  __init__.py  default_settings.py  mcp_config.py  passon3.md
core/: backtest_manager.py  data_router.py  news_manager.py  optimizer.py
data/: README.md  __init__.py  market_data.py
data/connectors/: alpha_vantage.py  broker_integration.py  chart_refresher.py  news_api.py  youtube.py  youtube_connector.py
data/storage/: postgres_client.py  redis_client.py  supabase_strategy_repository.py
docs/: IMPORTS_EXPORTS.md
docs/learning/: docker_guide.md
examples/: README.md  autoagent_live_test.py  autoagent_live_test_standalone.py  basic_indicators_test.py  realtime_chart_example.py  simple_oanda_test.py  social_media_sentiment_example.py  supabase_example.py  test_oanda_websocket.py
execution/: broker_api.py
features/: README.md  __init__.py  market_states.py
forex_ai/: __init__.py  cli.py  custom_types.py  exceptions.py  main.py
forex_ai/agents/: base.py  context_aware_analyzer.py  fundamental_analysis.py  lang_graph.py  market_state_analysis_agent.py  technical_analysis.py  tools.py
health/: base.py  component.py  locks.py  monitor.py  system.py
indicators/: custom_pivot.py
integration/: README.md  __init__.py  autoagent_orchestrator.py  enhanced_memory_manager.py  market_state_autoagent_integration.py
models/: README.md  controller.py  llm_controller.py
scripts/: setup_cloud_run_env.sh
services/: README.md
strategies/: sma_cross_strategy.py  strategy.py
tests/: conftest.py  test_api_endpoints.py
utils/: README.md  logging.py
(+213 files in other folders)
