[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forex_ai"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "Forex AI trading system"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "flask",
    "flask-cors",
    "httpx",
    "requests",
    "sse-starlette",
    "google-cloud-aiplatform",
    "google-auth",
    "openai-whisper",
    "datasets",
    "evaluate",
    "faiss-cpu",
    "scikit-learn",
    "tensorflow",
    "backtrader",
    "joblib",
    "numpy",
    "oandapyV20",
    "pandas",
    "pandas-ta",
    "scipy",
    "redis",
    "supabase",
    "click",
    "python-dotenv",
    "psutil",
    "pydantic",
    "pydantic-settings",
    "pytubefix",
    "tenacity",
    "PyYAML",
    "matplotlib",
    "plotly",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/forex"
"Bug Tracker" = "https://github.com/yourusername/forex/issues"

[project.scripts]
forex-ai = "forex_ai.cli:main"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["forex_ai*"]
exclude = ["tests*"] 